--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,6 @@
-FROM python:3.9
+FROM python:3.10-slim
 WORKDIR /app
-COPY . .
-RUN pip install -r requirements.txt
+COPY app.py .
+RUN pip install flask
+EXPOSE 5000
 CMD ["python", "app.py"]
